--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="box">
+    
     <H1>Hello World</H1>
     <h1>Happy Indian</h1>
-<<<<<<< HEAD
-=======
-    <h2>HEllo Dosto......</h2>
-    <h3>Kaise ho....?</h3>
->>>>>>> 91fa833 (Code Resaved)
+</div>
+
 </body>
 </html>
